--- a/statuten-vorlage.tex
+++ b/statuten-vorlage.tex
@@ -22,6 +22,43 @@
 \newlist{littera}{enumerate}{1}
 \setlist[littera, 1]{label = \alph*)}
 
+% Kürzel für Vorstandsmitglieder usw.
+\usepackage{glossaries}
+\newglossaryentry{obmensch}{name=Obfrau / Obmann,description=}
+\newglossaryentry{obmensch1}{name=die Obfrau / der Obmann,description=}
+\newglossaryentry{obmensch2}{name=der Obfrau / des Obmanns,description=}
+\newglossaryentry{obmensch3}{name=der Obfrau / dem Obmann,description=}
+\newglossaryentry{obmensch4}{name=die Obfrau / den Obmann,description=}
+
+\newglossaryentry{schrift}{name=Schriftführerin / Schriftführer,description=}
+\newglossaryentry{schrift1}{name=die Schriftführerin / der Schriftführer,description=}
+\newglossaryentry{schrift2}{name=der Schriftführerin / des Schriftführers,description=}
+\newglossaryentry{schrift3}{name=der Schriftführerin / dem Schriftführer,description=}
+\newglossaryentry{schrift4}{name=die Schriftführer / den Schriftführer,description=}
+
+\newglossaryentry{kassa}{name=Kassierin / Kassier,description=}
+\newglossaryentry{kassa1}{name=die Kassierin / der Kassier,description=}
+\newglossaryentry{kassa2}{name=der Kassierin / des Kassiers,description=}
+\newglossaryentry{kassa3}{name=der Kassierin / dem Kassier,description=}
+\newglossaryentry{kassa4}{name=die Kassierin / den Kassier,description=}
+
+\newglossaryentry{repruef}{name=Rechnungsprüferin / Rechnungsprüfer,plural=Rechnungsprüferinnen / Rechnungsprüfer,description=}
+\newglossaryentry{repruef2*}{name=Rechnungsprüferin / Rechnungsprüfers,description=}
+\newglossaryentry{repruef3}{name=der Rechnungsprüferin / dem Rechnungsprüfer,plural=den Rechnungsprüferinnen / den Rechnungsprüfern,description=}
+\newglossaryentry{repruef4}{name=die Rechnungsprüferin / den Rechnungsprüfer,plural=die Rechnungsprüferinnen / die Rechnungsprüfer,description=}
+
+
+\newglossaryentry{stv}{name=Stellvertreterin / Stellvertreter,plural=Stellvertreterinnen / Stellvertreter,description=}
+
+\newglossaryentry{gruend1}{name=die Gründerinnen / die Gründer,description=}
+
+
+\newglossaryentry{schiri}{name=Schiedsrichterin / Schiedsrichter,plural=Schiedsrichterinnen / Schiedsrichter,description=}
+
+\newglossaryentry{kura}{name=Kuratorin / Kurator,description=}
+\newglossaryentry{kura2*}{name=Kuratorin / Kurators,description=}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -92,7 +129,7 @@ Der Verein, dessen Tätigkeit nicht auf Gewinn gerichtet ist, bezweckt
     % Das sind die Offene Gesellschaft (OG) und die Kommanditgesellschaft (KG).
     werden.
     \item Über die Aufnahme von ordentlichen und außerordentlichen Mitgliedern entscheidet der Vorstand. Die Aufnahme kann ohne Angabe von Gründen verweigert werden.
-    \item Bis zur Entstehung des Vereins erfolgt die vorläufige Aufnahme von ordentlichen und außerordentlichen Mitgliedern durch die Vereinsgründer, im Fall eines bereits bestellten Vorstands durch diesen. Diese Mitgliedschaft wird erst mit Entstehung des Vereins wirksam. Wird ein Vorstand erst nach Entstehung des Vereins bestellt, erfolgt auch die (definitive) Aufnahme ordentlicher und außerordentlicher Mitglieder bis dahin durch die Gründer des Vereins.
+    \item Bis zur Entstehung des Vereins erfolgt die vorläufige Aufnahme von ordentlichen und außerordentlichen Mitgliedern durch \gls{gruend1} des Vereins, im Fall eines bereits bestellten Vorstands durch diesen. Diese Mitgliedschaft wird erst mit Entstehung des Vereins wirksam. Wird ein Vorstand erst nach Entstehung des Vereins bestellt, erfolgt auch die (definitive) Aufnahme ordentlicher und außerordentlicher Mitglieder bis dahin durch \gls{gruend1} des Vereins.
     \item Die Ernennung zum Ehrenmitglied erfolgt auf Antrag des Vorstands durch die Generalversammlung.
 \end{absatz}
 
@@ -116,14 +153,14 @@ Der Verein, dessen Tätigkeit nicht auf Gewinn gerichtet ist, bezweckt
     \item Jedes Mitglied ist berechtigt, vom Vorstand die Ausfolgung der Statuten zu verlangen.
     \item Mindestens ein Zehntel der Mitglieder kann vom Vorstand die Einberufung einer Generalversammlung verlangen.
     \item Die Mitglieder sind in jeder Generalversammlung vom Vorstand über die Tätigkeit und finanzielle Gebarung des Vereins zu informieren. Wenn mindestens ein Zehntel der Mitglieder dies unter Angabe von Gründen verlangt, hat der Vorstand den betreffenden Mitgliedern eine solche Information auch sonst binnen vier Wochen zu geben.
-    \item Die Mitglieder sind vom Vorstand über den geprüften Rechnungsabschluss (Rechnungslegung) zu informieren. Geschieht dies in der Generalversammlung, sind die Rechnungsprüfer einzubinden.
+    \item Die Mitglieder sind vom Vorstand über den geprüften Rechnungsabschluss (Rechnungslegung) zu informieren. Geschieht dies in der Generalversammlung, sind die \glspl{repruef} einzubinden.
     \item Die Mitglieder sind verpflichtet, die Interessen des Vereins nach Kräften zu fördern und alles zu unterlassen, wodurch das Ansehen und der Zweck des Vereins Abbruch erleiden könnte. Sie haben die Vereinsstatuten und die Beschlüsse der Vereinsorgane zu beachten. Die ordentlichen und außerordentlichen Mitglieder sind zur pünktlichen Zahlung der Beitrittsgebühr und der Mitgliedsbeiträge in der von der Generalversammlung beschlossenen Höhe verpflichtet.
 \end{absatz}
 
 
 
 \section{Vereinsorgange}
-Organe des Vereins sind die Generalversammlung (§§ \ref{generalversammlung} und \ref{generalversammlung-aufgaben}), der Vorstand (§§ \ref{vorstand}, \ref{vorstand-aufgaben}, \ref{vorstand-besonders}), die Rechnungsprüfer (§ \ref{rechnungspruefung}) und das Schiedsgericht (§ \ref{schiedsgericht}).
+Organe des Vereins sind die Generalversammlung (§§ \ref{generalversammlung} und \ref{generalversammlung-aufgaben}), der Vorstand (§§ \ref{vorstand}, \ref{vorstand-aufgaben}, \ref{vorstand-besonders}), die \glspl{repruef} (§ \ref{rechnungspruefung}) und das Schiedsgericht (§ \ref{schiedsgericht}).
 
 
 \section{Generalversammlung}\label{generalversammlung}
@@ -135,18 +172,18 @@ Organe des Vereins sind die Generalversammlung (§§ \ref{generalversammlung} un
     \begin{littera}
         \item \label{aogv-beschluss} Beschluss des Vorstands oder der ordentlichen Generalversammlung,
         \item \label{aogv-zehntel} schriftlichen Antrag von mindestens einem Zehntel der Mitglieder,
-        \item \label{aogv-rp-verlangen} Verlangen der Rechnungsprüfer (§ 21 Abs. 5 erster Satz VereinsG),
-        \item \label{aogv-rp-beschluss} Beschluss der/eines Rechnungsprüfer/s (§ 21 Abs. 5 zweiter Satz VereinsG, § \ref{vorstand} Abs. \ref{vorstand-wahl} dritter Satz dieser Statuten),
-        \item \label{aogv-kurator} Beschluss eines gerichtlich bestellten Kurators (§ \ref{vorstand} Abs. \ref{vorstand-wahl} letzter Satz dieser Statuten)
+        \item \label{aogv-rp-verlangen} Verlangen der \glspl{repruef} (§ 21 Abs. 5 erster Satz VereinsG),
+        \item \label{aogv-rp-beschluss} Beschluss der \glspl{repruef} /einer bzw. eines \gls{repruef2*} (§ 21 Abs. 5 zweiter Satz VereinsG, § \ref{vorstand} Abs. \ref{vorstand-wahl} dritter Satz dieser Statuten),
+        \item \label{aogv-kurator} Beschluss eines / einer gerichtlich bestellten \gls{kura2*} (§ \ref{vorstand} Abs. \ref{vorstand-wahl} letzter Satz dieser Statuten)
     \end{littera}
     binnen vier Wochen statt.
-    \item Sowohl zu den ordentlichen wie auch zu den außerordentlichen Generalversammlungen sind alle Mitglieder mindestens zwei Wochen vor dem Termin schriftlich, mittels Telefax oder per E-Mail (an die vom Mitglied dem Verein bekanntgegebene Fax-Nummer oder E-Mail-Adresse) einzuladen. Die Anberaumung der Generalversammlung hat unter Angabe der Tagesordnung zu erfolgen. Die Einberufung erfolgt durch den Vorstand (Abs. \ref{generalversammlung-exists} und Abs. \ref{generalversammlung-ao} lit. \ref{aogv-beschluss}, \ref{aogv-zehntel}, \ref{aogv-rp-verlangen}), durch die/einen Rechnungsprüfer (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-rp-beschluss}) oder durch einen gerichtlich bestellten Kurator (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-kurator}).
+    \item Sowohl zu den ordentlichen wie auch zu den außerordentlichen Generalversammlungen sind alle Mitglieder mindestens zwei Wochen vor dem Termin schriftlich, mittels Telefax oder per E-Mail (an die vom Mitglied dem Verein bekanntgegebene Fax-Nummer oder E-Mail-Adresse) einzuladen. Die Anberaumung der Generalversammlung hat unter Angabe der Tagesordnung zu erfolgen. Die Einberufung erfolgt durch den Vorstand (Abs. \ref{generalversammlung-exists} und Abs. \ref{generalversammlung-ao} lit. \ref{aogv-beschluss}, \ref{aogv-zehntel}, \ref{aogv-rp-verlangen}), durch die \glspl{repruef} / eine bzw. einen \gls{repruef} (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-rp-beschluss}) oder durch eine / einen gerichtlich bestellte / bestellten \gls{kura} (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-kurator}).
     \item Anträge zur Generalversammlung sind mindestens drei Tage vor dem Termin der Generalversammlung beim Vorstand schriftlich, mittels Telefax oder per E-Mail einzureichen.
     \item Gültige Beschlüsse – ausgenommen solche über einen Antrag auf Einberufung einer außerordentlichen Generalversammlung – können nur zur Tagesordnung gefasst werden.
     \item Bei der Generalversammlung sind alle Mitglieder teilnahmeberechtigt. Stimmberechtigt sind nur die ordentlichen und die Ehrenmitglieder. Jedes Mitglied hat eine Stimme. Die Übertragung des Stimmrechts auf ein anderes Mitglied im Wege einer schriftlichen Bevollmächtigung ist zulässig.
     \item Die Generalversammlung ist ohne Rücksicht auf die Anzahl der Erschienenen beschlussfähig.
     \item Die Wahlen und die Beschlussfassungen in der Generalversammlung erfolgen in der Regel mit einfacher Mehrheit der abgegebenen gültigen Stimmen. Beschlüsse, mit denen das Statut des Vereins geändert oder der Verein aufgelöst werden soll, bedürfen jedoch einer qualifizierten Mehrheit von zwei Dritteln der abgegebenen gültigen Stimmen.
-    \item Den Vorsitz in der Generalversammlung führt der/die Obmann/Obfrau, in dessen/deren Verhinderung sein/e/ihr/e Stellvertreter/in. Wenn auch diese/r verhindert ist, so führt das an Jahren älteste anwesende Vorstandsmitglied den Vorsitz.
+    \item Den Vorsitz in der Generalversammlung führt \gls{obmensch1}, in dessen/deren Verhinderung sein/e/ihr/e \gls{stv}. Wenn auch diese/r verhindert ist, so führt das an Jahren älteste anwesende Vorstandsmitglied den Vorsitz.
 \end{absatz}
 
 
@@ -155,9 +192,9 @@ Organe des Vereins sind die Generalversammlung (§§ \ref{generalversammlung} un
 Der Generalversammlung sind folgende Aufgaben vorbehalten:
 \begin{littera}
     \item Beschlussfassung über den Voranschlag;
-    \item Entgegennahme und Genehmigung des Rechenschaftsberichts und des Rechnungsabschlusses unter Einbindung der Rechnungsprüfer;
-    \item Wahl und Enthebung der Mitglieder des Vorstands und der Rechnungsprüfer;
-    \item Genehmigung von Rechtsgeschäften zwischen Rechnungsprüfern und Verein;
+    \item Entgegennahme und Genehmigung des Rechenschaftsberichts und des Rechnungsabschlusses unter Einbindung der \glspl{repruef};
+    \item Wahl und Enthebung der Mitglieder des Vorstands und der \glspl{repruef};
+    \item Genehmigung von Rechtsgeschäften zwischen \glspl{repruef} und Verein;
     \item Entlastung des Vorstands;
     \item Festsetzung der Höhe der Beitrittsgebühr und der Mitgliedsbeiträge für ordentliche und für außerordentliche Mitglieder;
     \item Verleihung und Aberkennung der Ehrenmitgliedschaft;
@@ -169,16 +206,16 @@ Der Generalversammlung sind folgende Aufgaben vorbehalten:
 
 \section{Vorstand}\label{vorstand}
 \begin{absatz}
-    \item Der Vorstand besteht aus sechs Mitgliedern, und zwar aus Obmann/Obfrau und Stellvertreter/in, Schriftführer/in und Stellvertreter/in sowie Kassier/in und Stellvertreter/in.
+    \item Der Vorstand besteht aus sechs Mitgliedern, und zwar aus \gls{obmensch} und \gls{stv}, \gls{schrift} und \gls{stv} sowie \gls{kassa} und \gls{stv}.
     % Das Vereinsgesetz verlangt, dass das Leitungsorgan des Vereins aus mindestens zwei natürlichen Personen besteht.
-    \item \label{vorstand-wahl} Der Vorstand wird von der Generalversammlung gewählt. Der Vorstand hat bei Ausscheiden eines gewählten Mitglieds das Recht, an seine Stelle ein anderes wählbares Mitglied zu kooptieren, wozu die nachträgliche Genehmigung in der nächstfolgenden Generalversammlung einzuholen ist. Fällt der Vorstand ohne Selbstergänzung durch Kooptierung überhaupt oder auf unvorhersehbar lange Zeit aus, so ist jeder Rechnungsprüfer verpflichtet, unverzüglich eine außerordentliche Generalversammlung zum Zweck der Neuwahl eines Vorstands einzuberufen. Sollten auch die Rechnungsprüfer handlungsunfähig sein, hat jedes ordentliche Mitglied, das die Notsituation erkennt, unverzüglich die Bestellung eines Kurators beim zuständigen Gericht zu beantragen, der umgehend eine außerordentliche Generalversammlung einzuberufen hat.
+    \item \label{vorstand-wahl} Der Vorstand wird von der Generalversammlung gewählt. Der Vorstand hat bei Ausscheiden eines gewählten Mitglieds das Recht, an seine Stelle ein anderes wählbares Mitglied zu kooptieren, wozu die nachträgliche Genehmigung in der nächstfolgenden Generalversammlung einzuholen ist. Fällt der Vorstand ohne Selbstergänzung durch Kooptierung überhaupt oder auf unvorhersehbar lange Zeit aus, so ist jede bzw. jeder \gls{repruef} verpflichtet, unverzüglich eine außerordentliche Generalversammlung zum Zweck der Neuwahl eines Vorstands einzuberufen. Sollten auch die \glspl{repruef} handlungsunfähig sein, hat jedes ordentliche Mitglied, das die Notsituation erkennt, unverzüglich die Bestellung einer oder eines \gls{kura} beim zuständigen Gericht zu beantragen, die / der umgehend eine außerordentliche Generalversammlung einzuberufen hat.
     \item \label{vorstand-periode} Die Funktionsperiode des Vorstands beträgt
     % zB zwei oder vier Jahre (abgestimmt auf den Abstand zwischen ordentlichen Generalversammlungen nach § 9 Abs 1).
      ....  Jahre; Wiederwahl ist möglich. Jede Funktion im Vorstand ist persönlich auszuüben.
-     \item Der Vorstand wird vom Obmann/von der Obfrau, bei Verhinderung von seinem/seiner/ihrem/ihrer Stellvertreter/in, schriftlich oder mündlich einberufen. Ist auch diese/r auf unvorhersehbar lange Zeit verhindert, darf jedes sonstige Vorstandsmitglied den Vorstand einberufen.
+     \item Der Vorstand wird von \gls{obmensch3}, bei Verhinderung von seinem/seiner/ihrem/ihrer \gls{stv}, schriftlich oder mündlich einberufen. Ist auch diese/r auf unvorhersehbar lange Zeit verhindert, darf jedes sonstige Vorstandsmitglied den Vorstand einberufen.
      \item Der Vorstand ist beschlussfähig, wenn alle seine Mitglieder eingeladen wurden und mindestens die Hälfte von ihnen anwesend ist.
      \item Der Vorstand fasst seine Beschlüsse mit einfacher Stimmenmehrheit; bei Stimmengleichheit gibt die Stimme des/der Vorsitzenden den Ausschlag.
-     \item Den Vorsitz führt der/die Obmann/Obfrau, bei Verhinderung sein/e/ihr/e Stellvertreter/in. Ist auch diese/r verhindert, obliegt der Vorsitz dem an Jahren ältesten anwesenden Vorstandsmitglied oder jenem Vorstandsmitglied, das die übrigen Vorstandsmitglieder mehrheitlich dazu bestimmen.
+     \item Den Vorsitz führt \gls{obmensch1}, bei Verhinderung sein/e/ihr/e \gls{stv}. Ist auch diese/r verhindert, obliegt der Vorsitz dem an Jahren ältesten anwesenden Vorstandsmitglied oder jenem Vorstandsmitglied, das die übrigen Vorstandsmitglieder mehrheitlich dazu bestimmen.
      \item \label{vorstand-ende} Außer durch den Tod und Ablauf der Funktionsperiode (Abs. \ref{vorstand-periode}) erlischt die Funktion eines Vorstandsmitglieds durch Enthebung (Abs. \ref{vorstand-enthebung}) und Rücktritt (Abs. \ref{vorstand-ruecktritt}). 
      \item \label{vorstand-enthebung} Die Generalversammlung kann jederzeit den gesamten Vorstand oder einzelne seiner Mitglieder entheben. Die Enthebung tritt mit Bestellung des neuen Vorstands bzw Vorstandsmitglieds in Kraft.
      \item \label{vorstand-ruecktritt} Die Vorstandsmitglieder können jederzeit schriftlich ihren Rücktritt erklären. Die Rücktrittserklärung ist  an den Vorstand, im Falle des Rücktritts des gesamten Vorstands an die Generalversammlung zu richten. Der Rücktritt wird erst mit Wahl bzw. Kooptierung (Abs. \ref{vorstand-wahl}) eines Nachfolgers wirksam.
@@ -202,25 +239,25 @@ Dem Vorstand obliegt die Leitung des Vereins. Er ist das ,,Leitungsorgan'' im Si
 
 \section{Besondere Obliegenheiten einzelner Vorstandsmitglieder}\label{vorstand-besonders}
 \begin{absatz}
-    \item Der/die Obmann/Obfrau führt die laufenden Geschäfte des Vereins. Der/die Schriftführer/in unterstützt den/die Obmann/Obfrau bei der Führung der Vereinsgeschäfte.
-    \item \label{vorstand-vertretung} Der/die Obmann/Obfrau vertritt den Verein nach außen. Schriftliche Ausfertigungen des Vereins bedürfen zu ihrer Gültigkeit der Unterschriften des/der Obmanns/Obfrau und des Schriftführers/der Schriftführerin, in Geldangelegenheiten (vermögenswerte Dispositionen) des/der Obmanns/Obfrau und des Kassiers/der Kassierin. Rechtsgeschäfte zwischen Vorstandsmitgliedern und Verein bedürfen der Zustimmung eines anderen Vorstandsmitglieds.
+    \item \Gls{obmensch1} führt die laufenden Geschäfte des Vereins. \Gls{schrift1} unterstützt \gls{obmensch4} bei der Führung der Vereinsgeschäfte.
+    \item \label{vorstand-vertretung} \Gls{obmensch1} vertritt den Verein nach außen. Schriftliche Ausfertigungen des Vereins bedürfen zu ihrer Gültigkeit der Unterschriften \gls{obmensch2} und \gls{schrift2}, in Geldangelegenheiten (vermögenswerte Dispositionen) \gls{obmensch2} und \gls{kassa2}. Rechtsgeschäfte zwischen Vorstandsmitgliedern und Verein bedürfen der Zustimmung eines anderen Vorstandsmitglieds.
     \item Rechtsgeschäftliche Bevollmächtigungen, den Verein nach außen zu vertreten bzw. für ihn zu zeichnen, können ausschließlich von den in Abs. \ref{vorstand-vertretung} genannten Vorstandsmitgliedern erteilt werden.
-    \item Bei Gefahr im Verzug ist der/die Obmann/Obfrau berechtigt, auch in Angelegenheiten, die in den Wirkungsbereich der Generalversammlung oder des Vorstands fallen, unter eigener Verantwortung selbständig Anordnungen zu treffen; im Innenverhältnis bedürfen diese jedoch der nachträglichen Genehmigung durch das zuständige Vereinsorgan.
-    \item Der/die Obmann/Obfrau führt den Vorsitz in der Generalversammlung und im Vorstand.
-    \item Der/die Schriftführer/in führt die Protokolle der Generalversammlung und des Vorstands.
-    \item Der/die Kassier/in ist für die ordnungsgemäße Geldgebarung des Vereins verantwortlich.
-    \item Im Fall der Verhinderung treten an die Stelle des/der Obmanns/Obfrau, des Schriftführers/der Schriftführerin oder des Kassiers/der Kassierin ihre Stellvertreter/innen.
+    \item Bei Gefahr im Verzug ist \gls{obmensch1} berechtigt, auch in Angelegenheiten, die in den Wirkungsbereich der Generalversammlung oder des Vorstands fallen, unter eigener Verantwortung selbständig Anordnungen zu treffen; im Innenverhältnis bedürfen diese jedoch der nachträglichen Genehmigung durch das zuständige Vereinsorgan.
+    \item \Gls{obmensch1} führt den Vorsitz in der Generalversammlung und im Vorstand.
+    \item \Gls{schrift1} führt die Protokolle der Generalversammlung und des Vorstands.
+    \item \Gls{kassa1} ist für die ordnungsgemäße Geldgebarung des Vereins verantwortlich.
+    \item Im Fall der Verhinderung treten an die Stelle \gls{obmensch2}, \gls{schrift2} oder \gls{kassa2} ihre \glspl{stv}.
 \end{absatz}
 
 
 
-\section{Rechnungsprüfer}\label{rechnungspruefung}
+\section{\glspl{repruef}}\label{rechnungspruefung}
 \begin{absatz}
-    \item Zwei Rechnungsprüfer werden von der Generalversammlung auf die Dauer von
+    \item Zwei \glspl{repruef} werden von der Generalversammlung auf die Dauer von
     % zB zwei oder vier Jahre (abgestimmt auf den Abstand zwischen ordentlichen Generalversammlungen nach § 9 Abs 1).
-    .... Jahren gewählt. Wiederwahl ist möglich. Die Rechnungsprüfer dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Prüfung ist.
-    \item Den Rechnungsprüfern obliegt die laufende Geschäftskontrolle sowie die Prüfung der Finanzgebarung des Vereins im Hinblick auf die Ordnungsmäßigkeit der Rechnungslegung und die statutengemäße Verwendung der Mittel. Der Vorstand hat den Rechnungsprüfern die erforderlichen Unterlagen vorzulegen und die erforderlichen Auskünfte zu erteilen. Die Rechnungsprüfer haben dem Vorstand über das Ergebnis der Prüfung zu berichten.
-    \item Rechtsgeschäfte zwischen Rechnungsprüfern und Verein bedürfen der Genehmigung durch die Generalversammlung. Im Übrigen gelten für die Rechnungsprüfer die Bestimmungen des § \ref{vorstand} Abs. \ref{vorstand-ende}, \ref{vorstand-enthebung}, \ref{vorstand-ruecktritt} sinngemäß.
+    .... Jahren gewählt. Wiederwahl ist möglich. Die \glspl{repruef} dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Prüfung ist.
+    \item \Glspl{repruef3} obliegt die laufende Geschäftskontrolle sowie die Prüfung der Finanzgebarung des Vereins im Hinblick auf die Ordnungsmäßigkeit der Rechnungslegung und die statutengemäße Verwendung der Mittel. Der Vorstand hat \glspl{repruef3} die erforderlichen Unterlagen vorzulegen und die erforderlichen Auskünfte zu erteilen. \Glspl{repruef} haben dem Vorstand über das Ergebnis der Prüfung zu berichten.
+    \item Rechtsgeschäfte zwischen \glspl{repruef3} und Verein bedürfen der Genehmigung durch die Generalversammlung. Im Übrigen gelten für \glspl{repruef4} die Bestimmungen des § \ref{vorstand} Abs. \ref{vorstand-ende}, \ref{vorstand-enthebung}, \ref{vorstand-ruecktritt} sinngemäß.
 \end{absatz}
 
 
@@ -228,7 +265,7 @@ Dem Vorstand obliegt die Leitung des Vereins. Er ist das ,,Leitungsorgan'' im Si
 \section{Schiedsgericht}\label{schiedsgericht}
 \begin{absatz}
     \item Zur Schlichtung von allen aus dem Vereinsverhältnis entstehenden Streitigkeiten ist das vereinsinterne Schiedsgericht berufen. Es ist eine ,,Schlichtungseinrichtung'' im Sinne des Vereinsgesetzes 2002 und kein Schiedsgericht nach den §§ 577 ff ZPO.
-    \item Das Schiedsgericht setzt sich aus drei ordentlichen Vereinsmitgliedern zusammen. Es wird derart gebildet, dass ein Streitteil dem Vorstand ein Mitglied als Schiedsrichter schriftlich namhaft macht. Über Aufforderung durch den Vorstand binnen sieben Tagen macht der andere Streitteil innerhalb von 14 Tagen seinerseits ein Mitglied des Schiedsgerichts namhaft. Nach Verständigung durch den Vorstand innerhalb von sieben Tagen wählen die namhaft gemachten Schiedsrichter binnen weiterer 14 Tage ein drittes ordentliches Mitglied zum/zur Vorsitzenden des Schiedsgerichts. Bei Stimmengleichheit entscheidet unter den Vorgeschlagenen das Los. Die Mitglieder des Schiedsgerichts dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Streitigkeit ist.
+    \item Das Schiedsgericht setzt sich aus drei ordentlichen Vereinsmitgliedern zusammen. Es wird derart gebildet, dass ein Streitteil dem Vorstand ein Mitglied als \gls{schiri} schriftlich namhaft macht. Über Aufforderung durch den Vorstand binnen sieben Tagen macht der andere Streitteil innerhalb von 14 Tagen seinerseits ein Mitglied des Schiedsgerichts namhaft. Nach Verständigung durch den Vorstand innerhalb von sieben Tagen wählen die namhaft gemachten \glspl{schiri} binnen weiterer 14 Tage ein drittes ordentliches Mitglied zum/zur Vorsitzenden des Schiedsgerichts. Bei Stimmengleichheit entscheidet unter den Vorgeschlagenen das Los. Die Mitglieder des Schiedsgerichts dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Streitigkeit ist.
     \item Das Schiedsgericht fällt seine Entscheidung nach Gewährung beiderseitigen Gehörs bei Anwesenheit aller seiner Mitglieder mit einfacher Stimmenmehrheit. Es entscheidet nach bestem Wissen und Gewissen. Seine Entscheidungen sind vereinsintern endgültig.
 \end{absatz}
 
