Weitgehend geschlechtsneutral formuliert
Gewählte Formulierungen: Obperson, Schriftführung, Kassa,
Rechnungsprüfende*r, Stellvertretung, Gründer*innen,
Schiedrichter*innen, Kurator*in

Manche Sätze sind entsprechend angepasst.

--- a/statuten-vorlage.tex
+++ b/statuten-vorlage.tex
@@ -28,57 +28,57 @@
 % (Verwendung der Nominative ohne Artikel über \gls usw.,
 % Fälle mit Artikeln via \glsuseri usw.)
 \newglossaryentry{obmensch}{description=,
-name=Obfrau / Obmann,
-user1=die Obfrau / der Obmann,
-user2=der Obfrau / des Obmanns,
-user3=der Obfrau / dem Obmann,
-user4=die Obfrau / den Obmann}
+name=Obperson,
+user1=die Obperson,
+user2=der Obperson,
+user3=der Obperson,
+user4=die Obperson}
 
 \newglossaryentry{schrift}{description=,
-name=Schriftführerin / Schriftführer,
-user1=die Schriftführerin / der Schriftführer,
-user2=der Schriftführerin / des Schriftführers,
-user3=der Schriftführerin / dem Schriftführer,
-user4=die Schriftführer / den Schriftführer}
+name=Schriftführung,
+user1=die Schriftführung,
+user2=der Schriftführung,
+user3=der Schriftführung,
+user4=die Schriftführung}
 
 \newglossaryentry{kassa}{description=,
-name=Kassierin / Kassier,
-user1=die Kassierin / der Kassier,
-user2=der Kassierin / des Kassiers,
-user3=der Kassierin / dem Kassier,
-user4=die Kassierin / den Kassier}
+name=Kassa,
+user1=die Kassa,
+user2=der Kassa,
+user3=der Kassa,
+user4=die Kassa}
 
 % Achtung 1, Genitiv ohne bestimmte Artikel!
 % Achtung 2, separater Eintrag für Pluralform!
 \newglossaryentry{repruef}{description=,
-name=Rechnungsprüferin / Rechnungsprüfer,
-plural=Rechnungsprüferinnen /Rechnungsprüfer,
-user2=Rechnungsprüferin / Rechnungsprüfers,
-user3=der Rechnungsprüferin / dem Rechnungsprüfer,
-user4=die Rechnungsprüferin / den Rechnungsprüfer}
+name=Rechnungsprüfende*r,
+plural=Rechnungsprüfenden,
+user2=der / des Rechnungsprüfenden,
+user3=der / dem Rechnungsprüfenden,
+user4=die / den Rechnungsprüfenden}
 
 % Plural für \gls{repruef}
 \newglossaryentry{repruef-pl}{description=,
-name=Rechnungsprüferinnen / Rechnungsprüfer,
-user3=den Rechnungsprüferinnen / den Rechnungsprüfern
-user4=die Rechnungsprüferinnen / die Rechnungsprüfer}
+name=Rechnungsprüfende,
+user3=den Rechnungsprüfenden,
+user4=die Rechnungsprüfenden}
 
 \newglossaryentry{stv}{description=,
-name=Stellvertreterin / Stellvertreter,
-plural=Stellvertreterinnen / Stellvertreter,}
+name=Stellvertretung,
+plural=Stellvertretungen}
 
 \newglossaryentry{gruend}{description=,
-name=die Gründerinnen / die Gründer,}
+name=die Gründer*innen}
 
 
 \newglossaryentry{schiri}{description=,
-name=Schiedsrichterin / Schiedsrichter,
-plural=Schiedsrichterinnen / Schiedsrichter}
+name=Schiedsrichter*in,
+plural=Schiedsrichter*innen}
 
 % Achtung, Genitiv ohne bestimmten Artikel!
 \newglossaryentry{kura}{description=,
-name=Kuratorin / Kurator,
-user2=Kuratorin / Kurators}
+name=Kurator*in,
+user2=Kurators*in}
 
 
 
@@ -195,17 +195,17 @@ Organe des Vereins sind die Generalversammlung (§§ \ref{generalversammlung} un
         \item \label{aogv-beschluss} Beschluss des Vorstands oder der ordentlichen Generalversammlung,
         \item \label{aogv-zehntel} schriftlichen Antrag von mindestens einem Zehntel der Mitglieder,
         \item \label{aogv-rp-verlangen} Verlangen der \glspl{repruef} (§ 21 Abs. 5 erster Satz VereinsG),
-        \item \label{aogv-rp-beschluss} Beschluss der \glspl{repruef} /einer bzw. eines \glsuserii{repruef} (§ 21 Abs. 5 zweiter Satz VereinsG, § \ref{vorstand} Abs. \ref{vorstand-wahl} dritter Satz dieser Statuten),
-        \item \label{aogv-kurator} Beschluss eines / einer gerichtlich bestellten \glsuserii{kura} (§ \ref{vorstand} Abs. \ref{vorstand-wahl} letzter Satz dieser Statuten)
+        \item \label{aogv-rp-beschluss} Beschluss der \glspl{repruef} / einer*s \glsuserii{repruef} (§ 21 Abs. 5 zweiter Satz VereinsG, § \ref{vorstand} Abs. \ref{vorstand-wahl} dritter Satz dieser Statuten),
+        \item \label{aogv-kurator} Beschluss einer*s gerichtlich bestellten \glsuserii{kura} (§ \ref{vorstand} Abs. \ref{vorstand-wahl} letzter Satz dieser Statuten)
     \end{littera}
     binnen vier Wochen statt.
-    \item Sowohl zu den ordentlichen wie auch zu den außerordentlichen Generalversammlungen sind alle Mitglieder mindestens zwei Wochen vor dem Termin schriftlich, mittels Telefax oder per E-Mail (an die vom Mitglied dem Verein bekanntgegebene Fax-Nummer oder E-Mail-Adresse) einzuladen. Die Anberaumung der Generalversammlung hat unter Angabe der Tagesordnung zu erfolgen. Die Einberufung erfolgt durch den Vorstand (Abs. \ref{generalversammlung-exists} und Abs. \ref{generalversammlung-ao} lit. \ref{aogv-beschluss}, \ref{aogv-zehntel}, \ref{aogv-rp-verlangen}), durch die \glspl{repruef} / eine bzw. einen \gls{repruef} (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-rp-beschluss}) oder durch eine / einen gerichtlich bestellte / bestellten \gls{kura} (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-kurator}).
+    \item Sowohl zu den ordentlichen wie auch zu den außerordentlichen Generalversammlungen sind alle Mitglieder mindestens zwei Wochen vor dem Termin schriftlich, mittels Telefax oder per E-Mail (an die vom Mitglied dem Verein bekanntgegebene Fax-Nummer oder E-Mail-Adresse) einzuladen. Die Anberaumung der Generalversammlung hat unter Angabe der Tagesordnung zu erfolgen. Die Einberufung erfolgt durch den Vorstand (Abs. \ref{generalversammlung-exists} und Abs. \ref{generalversammlung-ao} lit. \ref{aogv-beschluss}, \ref{aogv-zehntel}, \ref{aogv-rp-verlangen}), durch eine*n oder die \glspl{repruef} (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-rp-beschluss}) oder durch eine*n gerichtlich bestellte*n \gls{kura} (Abs. \ref{generalversammlung-ao} lit. \ref{aogv-kurator}).
     \item Anträge zur Generalversammlung sind mindestens drei Tage vor dem Termin der Generalversammlung beim Vorstand schriftlich, mittels Telefax oder per E-Mail einzureichen.
     \item Gültige Beschlüsse – ausgenommen solche über einen Antrag auf Einberufung einer außerordentlichen Generalversammlung – können nur zur Tagesordnung gefasst werden.
     \item Bei der Generalversammlung sind alle Mitglieder teilnahmeberechtigt. Stimmberechtigt sind nur die ordentlichen und die Ehrenmitglieder. Jedes Mitglied hat eine Stimme. Die Übertragung des Stimmrechts auf ein anderes Mitglied im Wege einer schriftlichen Bevollmächtigung ist zulässig.
     \item Die Generalversammlung ist ohne Rücksicht auf die Anzahl der Erschienenen beschlussfähig.
     \item Die Wahlen und die Beschlussfassungen in der Generalversammlung erfolgen in der Regel mit einfacher Mehrheit der abgegebenen gültigen Stimmen. Beschlüsse, mit denen das Statut des Vereins geändert oder der Verein aufgelöst werden soll, bedürfen jedoch einer qualifizierten Mehrheit von zwei Dritteln der abgegebenen gültigen Stimmen.
-    \item Den Vorsitz in der Generalversammlung führt \glsuseri{obmensch}, in dessen/deren Verhinderung sein/e/ihr/e \gls{stv}. Wenn auch diese/r verhindert ist, so führt das an Jahren älteste anwesende Vorstandsmitglied den Vorsitz.
+    \item Den Vorsitz in der Generalversammlung führt \glsuseri{obmensch}, in deren Verhinderung ihre \gls{stv}. Wenn auch diese verhindert ist, so führt das an Jahren älteste anwesende Vorstandsmitglied den Vorsitz.
 \end{absatz}
 
 
@@ -230,14 +230,14 @@ Der Generalversammlung sind folgende Aufgaben vorbehalten:
 \begin{absatz}
     \item Der Vorstand besteht aus sechs Mitgliedern, und zwar aus \gls{obmensch} und \gls{stv}, \gls{schrift} und \gls{stv} sowie \gls{kassa} und \gls{stv}.
     % Das Vereinsgesetz verlangt, dass das Leitungsorgan des Vereins aus mindestens zwei natürlichen Personen besteht.
-    \item \label{vorstand-wahl} Der Vorstand wird von der Generalversammlung gewählt. Der Vorstand hat bei Ausscheiden eines gewählten Mitglieds das Recht, an seine Stelle ein anderes wählbares Mitglied zu kooptieren, wozu die nachträgliche Genehmigung in der nächstfolgenden Generalversammlung einzuholen ist. Fällt der Vorstand ohne Selbstergänzung durch Kooptierung überhaupt oder auf unvorhersehbar lange Zeit aus, so ist jede bzw. jeder \gls{repruef} verpflichtet, unverzüglich eine außerordentliche Generalversammlung zum Zweck der Neuwahl eines Vorstands einzuberufen. Sollten auch die \glspl{repruef} handlungsunfähig sein, hat jedes ordentliche Mitglied, das die Notsituation erkennt, unverzüglich die Bestellung einer oder eines \gls{kura} beim zuständigen Gericht zu beantragen, die / der umgehend eine außerordentliche Generalversammlung einzuberufen hat.
+    \item \label{vorstand-wahl} Der Vorstand wird von der Generalversammlung gewählt. Der Vorstand hat bei Ausscheiden eines gewählten Mitglieds das Recht, an seine Stelle ein anderes wählbares Mitglied zu kooptieren, wozu die nachträgliche Genehmigung in der nächstfolgenden Generalversammlung einzuholen ist. Fällt der Vorstand ohne Selbstergänzung durch Kooptierung überhaupt oder auf unvorhersehbar lange Zeit aus, so ist jede*r \gls{repruef-pl} verpflichtet, unverzüglich eine außerordentliche Generalversammlung zum Zweck der Neuwahl eines Vorstands einzuberufen. Sollten auch die \glspl{repruef} handlungsunfähig sein, hat jedes ordentliche Mitglied, das die Notsituation erkennt, unverzüglich die Bestellung einer*s \gls{kura} beim zuständigen Gericht zu beantragen, welche*r umgehend eine außerordentliche Generalversammlung einzuberufen hat.
     \item \label{vorstand-periode} Die Funktionsperiode des Vorstands beträgt
     % zB zwei oder vier Jahre (abgestimmt auf den Abstand zwischen ordentlichen Generalversammlungen nach § 9 Abs 1).
      ....  Jahre; Wiederwahl ist möglich. Jede Funktion im Vorstand ist persönlich auszuüben.
-     \item Der Vorstand wird von \glsuseriii{obmensch}, bei Verhinderung von seinem/seiner/ihrem/ihrer \gls{stv}, schriftlich oder mündlich einberufen. Ist auch diese/r auf unvorhersehbar lange Zeit verhindert, darf jedes sonstige Vorstandsmitglied den Vorstand einberufen.
+     \item Der Vorstand wird von \glsuseriii{obmensch}, bei Verhinderung von ihrer \gls{stv}, schriftlich oder mündlich einberufen. Ist auch diese auf unvorhersehbar lange Zeit verhindert, darf jedes sonstige Vorstandsmitglied den Vorstand einberufen.
      \item Der Vorstand ist beschlussfähig, wenn alle seine Mitglieder eingeladen wurden und mindestens die Hälfte von ihnen anwesend ist.
-     \item Der Vorstand fasst seine Beschlüsse mit einfacher Stimmenmehrheit; bei Stimmengleichheit gibt die Stimme des/der Vorsitzenden den Ausschlag.
-     \item Den Vorsitz führt \glsuseri{obmensch}, bei Verhinderung sein/e/ihr/e \gls{stv}. Ist auch diese/r verhindert, obliegt der Vorsitz dem an Jahren ältesten anwesenden Vorstandsmitglied oder jenem Vorstandsmitglied, das die übrigen Vorstandsmitglieder mehrheitlich dazu bestimmen.
+     \item Der Vorstand fasst seine Beschlüsse mit einfacher Stimmenmehrheit; bei Stimmengleichheit gibt die Stimme des Vorsitzes den Ausschlag.
+     \item Den Vorsitz führt \glsuseri{obmensch}, bei Verhinderung ihre \gls{stv}. Ist auch diese verhindert, obliegt der Vorsitz dem an Jahren ältesten anwesenden Vorstandsmitglied oder jenem Vorstandsmitglied, das die übrigen Vorstandsmitglieder mehrheitlich dazu bestimmen.
      \item \label{vorstand-ende} Außer durch den Tod und Ablauf der Funktionsperiode (Abs. \ref{vorstand-periode}) erlischt die Funktion eines Vorstandsmitglieds durch Enthebung (Abs. \ref{vorstand-enthebung}) und Rücktritt (Abs. \ref{vorstand-ruecktritt}). 
      \item \label{vorstand-enthebung} Die Generalversammlung kann jederzeit den gesamten Vorstand oder einzelne seiner Mitglieder entheben. Die Enthebung tritt mit Bestellung des neuen Vorstands bzw Vorstandsmitglieds in Kraft.
      \item \label{vorstand-ruecktritt} Die Vorstandsmitglieder können jederzeit schriftlich ihren Rücktritt erklären. Die Rücktrittserklärung ist  an den Vorstand, im Falle des Rücktritts des gesamten Vorstands an die Generalversammlung zu richten. Der Rücktritt wird erst mit Wahl bzw. Kooptierung (Abs. \ref{vorstand-wahl}) eines Nachfolgers wirksam.
@@ -275,7 +275,7 @@ Dem Vorstand obliegt die Leitung des Vereins. Er ist das ,,Leitungsorgan'' im Si
 
 \section{\glspl{repruef}}\label{rechnungspruefung}
 \begin{absatz}
-    \item Zwei \glspl{repruef} werden von der Generalversammlung auf die Dauer von
+    \item Zwei \gls{repruef-pl} werden von der Generalversammlung auf die Dauer von
     % zB zwei oder vier Jahre (abgestimmt auf den Abstand zwischen ordentlichen Generalversammlungen nach § 9 Abs 1).
     .... Jahren gewählt. Wiederwahl ist möglich. Die \glspl{repruef} dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Prüfung ist.
     \item \Glsuseriii{repruef-pl} obliegt die laufende Geschäftskontrolle sowie die Prüfung der Finanzgebarung des Vereins im Hinblick auf die Ordnungsmäßigkeit der Rechnungslegung und die statutengemäße Verwendung der Mittel. Der Vorstand hat \glsuseriii{repruef-pl} die erforderlichen Unterlagen vorzulegen und die erforderlichen Auskünfte zu erteilen. \Glspl{repruef} haben dem Vorstand über das Ergebnis der Prüfung zu berichten.
@@ -287,7 +287,7 @@ Dem Vorstand obliegt die Leitung des Vereins. Er ist das ,,Leitungsorgan'' im Si
 \section{Schiedsgericht}\label{schiedsgericht}
 \begin{absatz}
     \item Zur Schlichtung von allen aus dem Vereinsverhältnis entstehenden Streitigkeiten ist das vereinsinterne Schiedsgericht berufen. Es ist eine ,,Schlichtungseinrichtung'' im Sinne des Vereinsgesetzes 2002 und kein Schiedsgericht nach den §§ 577 ff ZPO.
-    \item Das Schiedsgericht setzt sich aus drei ordentlichen Vereinsmitgliedern zusammen. Es wird derart gebildet, dass ein Streitteil dem Vorstand ein Mitglied als \gls{schiri} schriftlich namhaft macht. Über Aufforderung durch den Vorstand binnen sieben Tagen macht der andere Streitteil innerhalb von 14 Tagen seinerseits ein Mitglied des Schiedsgerichts namhaft. Nach Verständigung durch den Vorstand innerhalb von sieben Tagen wählen die namhaft gemachten \glspl{schiri} binnen weiterer 14 Tage ein drittes ordentliches Mitglied zum/zur Vorsitzenden des Schiedsgerichts. Bei Stimmengleichheit entscheidet unter den Vorgeschlagenen das Los. Die Mitglieder des Schiedsgerichts dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Streitigkeit ist.
+    \item Das Schiedsgericht setzt sich aus drei ordentlichen Vereinsmitgliedern zusammen. Es wird derart gebildet, dass ein Streitteil dem Vorstand ein Mitglied als \gls{schiri} schriftlich namhaft macht. Über Aufforderung durch den Vorstand binnen sieben Tagen macht der andere Streitteil innerhalb von 14 Tagen seinerseits ein Mitglied des Schiedsgerichts namhaft. Nach Verständigung durch den Vorstand innerhalb von sieben Tagen wählen die namhaft gemachten \glspl{schiri} binnen weiterer 14 Tage ein drittes ordentliches Mitglied zum Vorsitz des Schiedsgerichts. Bei Stimmengleichheit entscheidet unter den Vorgeschlagenen das Los. Die Mitglieder des Schiedsgerichts dürfen keinem Organ – mit Ausnahme der Generalversammlung – angehören, dessen Tätigkeit Gegenstand der Streitigkeit ist.
     \item Das Schiedsgericht fällt seine Entscheidung nach Gewährung beiderseitigen Gehörs bei Anwesenheit aller seiner Mitglieder mit einfacher Stimmenmehrheit. Es entscheidet nach bestem Wissen und Gewissen. Seine Entscheidungen sind vereinsintern endgültig.
 \end{absatz}
 
